examples/test/testpolicy1684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1684
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key5: value2
      key35: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value10
      podSelector:
        matchLabels:
          key0: value19
          key43: value28
          key19: value33
